--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
   },
   "homepage": "https://github.com/egonny/epcqr-server#readme",
   "dependencies": {
+    "express": "^4.16.3",
+    "iban": "0.0.10",
     "qrcode": "^1.2.0"
   },
   "devDependencies": {
+    "@types/express": "^4.16.0",
+    "@types/iban": "0.0.30",
     "@types/node": "^10.3.2",
     "@types/qrcode": "^0.8.1",
     "typescript": "^2.9.1"
